--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -31,40 +31,40 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        ## 1. Mathematical Background
-        
-        An elliptic curve $E$ over $\mathbb{Q}$ is defined by the Weierstrass equation:
-        
-        $$
-        E: y^2 = x^3 + ax + b
-        $$
-        
-        where $a, b \in \mathbb{Q}$ and the discriminant
-        
-        $$
-        \Delta = -16(4a^3 + 27b^2) \neq 0.
-        $$
-        
-        ### Torsion Points
-        
-        A point $P \in E(\mathbb{Q})$ is called a **torsion point** if there exists a positive integer $n$ such that:
-        
-        $$
-        nP = \mathcal{O},
-        $$
-        
-        where $\mathcal{O}$ is the point at infinity.
-        
-        ### Nagell–Lutz Theorem (Used Here)
-        
-        If $E$ is given by a **short Weierstrass equation with integer coefficients**
-        $a,b \in \mathbb{Z}$, then every torsion point
-        $P=(x,y) \in E(\mathbb{Q})$ satisfies:
-        
-        - $x,y \in \mathbb{Z}$, and  
-        - either $y=0$ or $y^2 \mid \Delta$.
-        
-        This theorem is used to enumerate all torsion points exactly.
+        "## 1. Mathematical Background\n",
+        "\n",
+        "An elliptic curve $E$ over $\\mathbb{Q}$ is defined by the Weierstrass equation:\n",
+        "\n",
+        "$$\n",
+        "E: y^2 = x^3 + ax + b\n",
+        "$$\n",
+        "\n",
+        "where $a, b \\in \\mathbb{Q}$ and the discriminant\n",
+        "\n",
+        "$$\n",
+        "\\Delta = -16(4a^3 + 27b^2) \\neq 0.\n",
+        "$$\n",
+        "\n",
+        "### Torsion Points\n",
+        "\n",
+        "A point $P \\in E(\\mathbb{Q})$ is called a **torsion point** if there exists a positive integer $n$ such that:\n",
+        "\n",
+        "$$\n",
+        "nP = \\mathcal{O},\n",
+        "$$\n",
+        "\n",
+        "where $\\mathcal{O}$ is the point at infinity.\n",
+        "\n",
+        "### Nagell–Lutz Theorem (Used Here)\n",
+        "\n",
+        "If $E$ is given by a **short Weierstrass equation with integer coefficients**\n",
+        "$a,b \\in \\mathbb{Z}$, then every torsion point\n",
+        "$P=(x,y) \\in E(\\mathbb{Q})$ satisfies:\n",
+        "\n",
+        "- $x,y \\in \\mathbb{Z}$, and  \n",
+        "- either $y=0$ or $y^2 \\mid \\Delta$.\n",
+        "\n",
+        "This theorem is used to enumerate all torsion points exactly.\n"
       ]
     },
     {
@@ -113,22 +113,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        torsion_result = finder1.find_torsion_subgroup()
-        
-        print("=" * 60)
-        print("TORSION SUBGROUP ANALYSIS")
-        print("=" * 60)
-        print(f"Curve: {curve1}")
-        print(f"Group Size: {torsion_result['size']}")
-        print(f"Group Structure: {torsion_result['group_structure']}")
-        print("\nTorsion Points:")
-        print("-" * 60)
-        
-        for point in torsion_result['torsion_points']:
-            order = torsion_result['orders'][point]
-            print(f"  {str(point):30s} | Order: {order}")
-            
-        print("=" * 60)
+        "torsion_result = finder1.find_torsion_subgroup()\n",
+        "\n",
+        "print(\"=\" * 60)\n",
+        "print(\"TORSION SUBGROUP ANALYSIS\")\n",
+        "print(\"=\" * 60)\n",
+        "print(f\"Curve: {curve1}\")\n",
+        "print(f\"Group Size: {torsion_result['size']}\")\n",
+        "print(f\"Group Structure: {torsion_result['group_structure']}\")\n",
+        "print(\"\\nTorsion Points:\")\n",
+        "print(\"-\" * 60)\n",
+        "\n",
+        "for point in torsion_result['torsion_points']:\n",
+        "    order = torsion_result['orders'][point]\n",
+        "    print(f\"  {str(point):30s} | Order: {order}\")\n",
+        "    \n",
+        "print(\"=\" * 60)\n"
       ]
     }
   ],
